@@ -1,3 +1,6 @@
-$( document ).ready( function(){	
-	loginCheck();
+$( document ).ready( function(){
+	setTimeout(function () {
+		loginCheck();
+
+	}, 20);	
 });
